--- a/public/loser.html
+++ b/public/loser.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Derrota</title>
 </head>
 <body>
-    <h1>HAS PALMADO</h1>
-    <p><a href="./index.html">Volver a jugar</a></p>
+    <div class="resultado">
+        <h1>HAS PALMADO</h1>
+        <p><a href="./index.html">Volver a jugar</a></p>
+    </div>
 </body>
 </html>
